Add JavaScript querying dance ability

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>I CAN MAKE YOU DANCE</title>
 </head>
 <body>
     <header>
         <h1>I CAN MAKE YOU DANCE</h1>
     </header>
+    <script src="./app.js"></script>
     <main>
         <div>
          <ul>
