--- a/index.html
+++ b/index.html
@@ -4,21 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
+    <script src="./app.js"></script>
     <title>I CAN MAKE YOU DANCE</title>
 </head>
 <body>
     <header>
         <h1>I CAN MAKE YOU DANCE</h1>
+        <p>
+            <script>
+                canYouDance();
+            </script>
+        </p>
     </header>
-    <script src="./app.js"></script>
     <main>
-        <div>
+        <nav>
          <ul>
             <li><a href="basic-dance.html">BASIC DANCE</a></li>
             <li><a href="">ADVANCED DANCE</a></li>
             <li><a href="">FORBIDDEN DANCE</a></li>
          </ul>   
-        </div>
+        </nav>
         <div><img src="https://wallpapers.com/images/featured/sad-person-pictures-2bnso9uiwlhrikrx.jpg">
             <p>This person does not know how to dance. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate harum, facilis nostrum autem numquam reprehenderit molestiae totam animi ab minus quo eum suscipit rerum consectetur facere iure voluptatem eligendi esse!</p>
         </div>
@@ -31,6 +36,8 @@
         </div>
     </section>
     </main>
-    <footer>&copy; Legitimate Dance Company</footer>
+    <footer>&copy; Legitimate Dance Company
+        <button onclick="dontLeaveMe()">I want to leave this place</button>
+    </footer>
 </body>
 </html>
